Bug 1728058 - Remove incorrect MOZ_RELEASE_ASSERT(CorePS::Exists()) on profiler_register_thread - r=canaltinova

Since bug 1722261, thread registrations are not tied to CorePS anymore, ThreadRegistry stores them in a static list.
Also, profiler_register_thread immediately calls ThreadRegistration::RegisterThread -> ThreadRegistration constructor -> ThreadRegistry::Register, which checks if there is a CorePS before working with it.
So this assertion can safely be removed now.

In rare instances, `CorePS` may not actually exist (profiler not initialized yet, or already shutdown), and this assertion could trigger and report an unimportant crash.

Differential Revision: https://phabricator.services.mozilla.com/D123912